2006-09-03  Per Bothner  <per@bothner.com>

	* kawa/standard/atan.java: Removed class, replaced by function atan
	in kawa/lib/numbers.scm.
	* kawa/standard/string2number.java: Removed class, replaced by function
	string->number in kawa/lib/numbers.scm,	
	* kawa/standard/Makefile.am: Update accordingly.
	* kawa/standard/Scheme.java (initScheme): Update accordingly.

2006-08-23  Per Bothner  <per@bothner.com>

	* kawa/standard/require.java (importDefinitions): Change type paraneter
	to className String.  Handle appropriate exceptions.
	Various tweaks to handle cycles etc.
	(scanForDefinitions): Update accordingly.

	* kawa/standard/require.java (importDefinitions): Minor simplification.
	Also, don't make instance decl private if immediate.
	Set column number of alias decl, in addition to line number.

2006-08-16  Per Bothner  <per@bothner.com>

	* Makefile.am (kawa/Version.java): If .svn/entries exists, extract
	SVN revision number and date and add that to the Kawa version string.
	(CLEANFILES): Move kawa/Version.java from -MAINTAINERCLEANFILES.
	(MAINTAINERCLEANFILES): Remove since no longer needed.

2006-08-08  Per Bothner  <per@bothner.com>

	* kawa/standard/require.java (scanForDefinition): Handle extended
	'(require [CLASS] "SOURCE")' syntax.
	(importDefinitions): New overloaded method, handles above new cases.
	Parse module if appropriate.
	(importDefinitions): Handle non-compiled class.
	Remove most special handling of immediate mode.

	* configure.in (--with-XQTS): New flag.
	(XQTS_PATH): New substitution variable.

2006-06-28  Per Bothner  <per@bothner.com>

	* kawa/standard/TracedProcedure.java (curIndentSym): Use new
	Symbol.makeUninterned method.
	* Makefile.am: New (always-disabled) PreProcess macro JAXP-QName.

2006-06-23  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (check_if_Syntax): Inherit macroScope
	if from current TemplateScope.

2006-06-21  Per Bothner  <per@bothner.com>
